[package]
name = "mio-child-process"
version = "0.1.2"
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
readme = "readme.md"
description = "An extension to mio to support child processes"
license = "MIT"
repository = "https://github.com/trangar/mio-child-process"

[dependencies]
mio-extras = "2.0.4"
mio = "0.6.14"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["tlhelp32"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2.43" }
